--- a/neighborhood2.html
+++ b/neighborhood2.html
@@ -3,7 +3,7 @@
 		<title> Choose Your Own Story</title>
 	<body>
 		<h1> Skateboarding down the street, CC finds a wide park that has...</h1>
-		<a href= "BeatifulTree2.html"> beautiful trees with yellow leaves falling</a>
+		<a href= "BeautifulTree2.html"> beautiful trees with yellow leaves falling</a>
 		<br></br>
 		<img src= "yellowtree2.jpg" alt="yellow tree" width="500px">
 		<p>"Yellow Tree" by Sakeeb Sabakka is licensed under CC BY 2.0</p>
